[package]
name = "templates"
version = "0.1.0"
authors = ["Takahiro Miyamoto <takahiro.miyamoto@glv.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "0.11"
serde = "1"
serde_derive = "1"
actix-web = "0.7"
